# Ultimate-Tic-Tac-Toe

./: .gitignore  Board.cpp  Board.h  CMakeLists.txt  EvalMove.cpp  EvalMove.h  Game.cpp  Game.h  MinimaxAI.cpp  MinimaxAI.h  UltimateBoard.cpp  UltimateBoard.h  main.cpp
libs/Core/: CMakeLists.txt
libs/Core/include/Core/: board.h  game.h  ultimateboard.h
libs/Core/src/: board.cpp  game.cpp  ultimateboard.cpp
libs/Core/test/: CMakeLists.txt  boardTests.cpp  gameTests.cpp  ultimateboardTests.cpp
libs/FSM/: CMakeLists.txt
libs/FSM/include/FSM/: FSM.h
libs/FSM/src/: FSM.cpp
libs/FSM/test/: CMakeLists.txt  FSMTests.cpp
libs/Scene/: CMakeLists.txt
libs/Scene/include/Scene/: manager.h  scene.h
libs/Scene/src/: manager.cpp
libs/Scene/test/: CMakeLists.txt
src/: aigame.cpp  aigame.h  button.cpp  button.h  game.cpp  game.h  main.cpp  menu.cpp  menu.h  saver.cpp  saver.h
src/resource/: cross.png~  zero.png~
src/src_advanced/: Ultimate TTT.cpp
